@@ -5,7 +5,7 @@
 ^Makefile.(old|bak)\z
 ^FastCalc.(o|c|bs)\z
 ^Math-BigInt-FastCalc-
-^MYMETA\.yml\z
+^MYMETA\.(yml|json)\z
 .*\.patch\z
 pm_to_blib
 \.git.*
