@@ -14,13 +14,14 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 e246062fd719088155013e7990d7b325b3520689 CHANGES
+SHA1 765251f4a27fc6f190ffad2c4c15067c84350c46 CHANGES
 SHA1 58d7a00ab2a9f5448a561d49b5a2077efa245ac7 CREDITS
 SHA1 c43ea080f42c120ca52b6f0755b13562597e55c0 FastCalc.xs
-SHA1 7239e6509251999ce2f0af0d61a5ec3de65a7f63 MANIFEST
-SHA1 42d4a920cbc07283abe63a16586e26b49e458b6d MANIFEST.SKIP
-SHA1 159a738cb73eb9a972e48d8cfcfcf01e9b95be6c META.yml
-SHA1 142aa0e24f8f17bab5c69d435072187c546ac653 Makefile.PL
+SHA1 c00af0af44a912b550a7e86cd14fbaf0fcc421fc MANIFEST
+SHA1 b84f4d19c93c52aa32e5145cabce4f7e1ccb85a9 MANIFEST.SKIP
+SHA1 3ffafaa0f0a03f7bd1c927424cc1b320ab46fa07 META.json
+SHA1 11e13804372e413cfc4e677a0c744873f7ca0ec6 META.yml
+SHA1 d25310bd2b2821694dec302780eabae58c2bd772 Makefile.PL
 SHA1 a1e38089425d81c98d94604ac652fd3ef775cdee README
 SHA1 280c4f82fc9e7322fe2bbed7e5f595bfe9fe7783 TODO
 SHA1 7b4ae50ebac72d20761171c4c2b50c206344ea40 inc/Module/Install.pm
@@ -31,25 +32,25 @@ SHA1 73ab91490a628452cc140db72ef9d13a1326d211 inc/Module/Install/Makefile.pm
 SHA1 8ce3f2b414e4617e6233dd4ba10830f8c5d672ec inc/Module/Install/Metadata.pm
 SHA1 3b0acd2eeac93a0afe48120f5648f0db362e5bbf inc/Module/Install/Win32.pm
 SHA1 f08924f051e623f8e09fa6a121993c4a9cf7d9eb inc/Module/Install/WriteAll.pm
-SHA1 e4a7a3fe83dea192cec74dddb439218566ae1e30 lib/Math/BigInt/FastCalc.pm
+SHA1 f3e6c0427ef780ee2cc93ed57a1c9efa567dd591 lib/Math/BigInt/FastCalc.pm
 SHA1 6e9557e746e881ab1568cdcec17ff3c4f1508502 t/00sig.t
 SHA1 b5ae0080ba067ecb1253a50834dc6c2946af26b9 t/01load.t
 SHA1 02ef05af53cb7378452590324bb21dfe61f44069 t/02pod.t
 SHA1 b0d251938fb1a6f4ab2b731b9f1bfa2ce489ccaf t/03podcov.t
-SHA1 03a9a3dde7d4fcc3eb2e8f245ab0b0253f1d5821 t/bigfltpm.inc
+SHA1 d05514d6cae3afa4feb983d5467eaf9422aa546c t/bigfltpm.inc
 SHA1 a8f364fea5e2993f5ae7bd3f8463024175d33e24 t/bigfltpm.t
 SHA1 67d03610a42a11a2d8f73358441a8fab18b12103 t/bigintfc.t
-SHA1 108a20412616ea34d67b93891383d47e3a619120 t/bigintpm.inc
-SHA1 e91b777f7c22648d8debaf4f663d519decda083b t/bigintpm.t
+SHA1 845e7daa3c6b2463a6fdc9218044975801547bb8 t/bigintpm.inc
+SHA1 5c7e31a73f1827d08118f96cf31d5d4e792ab8c0 t/bigintpm.t
 SHA1 9914c24f7ac04c96490e0f43e9c8a3f12b565610 t/bootstrap.t
 SHA1 47b841398933fd438c137ea5ffda893497b68443 t/leak.t
-SHA1 41bbc8a406b4685c932fd36f20b085ea2f04faf1 t/mbi_rand.t
+SHA1 2b9490eab4d5371b804a39fb16e77c6bd6bbd006 t/mbi_rand.t
 SHA1 38d000d99cb2492ab518786e62ab1fae710e0f8d t/mbimbf.inc
 SHA1 2709f7d1acdb39aab910d3ba4c88191b28cc3cfc t/mbimbf.t
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.11 (GNU/Linux)
+Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk4YNp8ACgkQdC8qQo5jWl4vlwCeIfbcTWjlUd2a5p4686b3ACly
-zuMAnj+j6U7dK96uAwcUvAqmJNLDmYxT
-=p10i
+iEYEARECAAYFAk5oYTkACgkQVQvyyU1bchqcSACg3u60tu6+1endJ4D9olQiu2bw
+8CIAn14tYwPBppsOaK+M8OTlOubywsPG
+=tLOv
 -----END PGP SIGNATURE-----
