@@ -1,5 +1,14 @@
 Revision history for Perl extension Math::BigInt::FastCalc.
 
+2011-09-04 0.30 pjacklam
+ * Math::BigInt::FastCalc now requires Math::BigInt v1.997 (Peter John Acklam).
+ * Include "^MYMETA\.(yml|json)\z" in MANIFEST.SKIP. Whereas META.* are
+   generated by the distribution author at packaging time, MYMETA.* are
+   generated by the end user at configure time after any dynamic
+   dependencies are known. (Peter John Acklam)
+ * Updated common test files from the Math::BigInt distribution. (Peter
+   John Acklam)
+
 2011-07-09 0.29 rafl (7560 tests)
   * Synchronise with blead perl.
     + Reduce object code size significantly through PERL_NO_GET_CONTEXT.
